--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <img src="logo.png" alt="Aab Karo Padhai Logo">
+  <img src="logo.png" alt="Logo" style="height: 60px;">
+
 
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
